The whole new design; Notification is now sent if the order is cancelled

--- a/src/templates-old/cart.html
+++ b/src/templates-old/cart.html
@@ -47,8 +47,7 @@
                     <div class="row">
                         
                         <div class="col-md-4 my-auto">
-                            <img src="{{pr.icon}}" alt="{{pr.title}}" width="80px" height="80px" class="cartElImg">
-                            <span class="contentSubtitle" style="vertical-align: sub;">{{pr.title}}</span>
+                            <span class="contentSubtitle">{{pr.title}}</span>
                         </div>
                         <div class="col-md-8 text-md-center my-auto cartElementPrice">
                             {% comment %} TMP: {% endcomment %}
